
syntax = "proto3";

option go_package = "proto/tours";

service Tour {
	rpc GetAvailableEquipment (EquipmentIds) returns (EquipmentsResponse) {}
    rpc GetAllEquipment (Page) returns (PagedEquipmentsResponse) {}
	rpc GetEquipment (EquipmentId) returns (EquipmentResponse) {}
	rpc CreateEquipment (EquipmentResponse) returns (EquipmentResponse) {}
	rpc UpdateEquipment (UpdateEquipmentId) returns (EquipmentResponse) {}
	rpc DeleteEquipment (EquipmentId) returns (EquipmentResponse) {}
}

message EquipmentIds{
	string id = 1;
	repeated string equipmentIds = 2;
}
message Page{
	int32 page = 1;
	int32 pageSize = 2;
}
message EquipmentId{
	string id = 1;
}
message UpdateEquipmentId{
	EquipmentResponse equipment = 1;
	string id = 2;
}
message EquipmentResponse{
	optional string id = 1;
	string name = 2;
	optional string description = 3;
}
message EquipmentsResponse{
	repeated EquipmentResponse EquipmentResponse = 1;
}
message PagedEquipmentsResponse{
	repeated EquipmentResponse Results = 1;
	int32 TotalCounts = 2;
}
